<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user"
            android:layout_margin="10dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daneobobowe"
            android:id="@+id/radioButtonMP1"
            android:checked="false"
            android:layout_margin="10dp"
        />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_margin="10dp">
        <ImageView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/book" />

        <RadioButton
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edukacja"
            android:id="@+id/radioButtonMP2"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_margin="10dp">
        <ImageView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP3"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/briefcase" />

        <RadioButton
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Doświadczenie"
            android:id="@+id/radioButtonMP3"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP4"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/quillink" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Szkolenia"
            android:id="@+id/radioButtonMP4"
            android:checked="false"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP5"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/designercup"
            android:layout_margin="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Certyfikaty"
            android:id="@+id/radioButtonMP5"
            android:checked="false"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewMP6"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/penfountain"
            android:layout_marginLeft="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jezyki"
            android:id="@+id/radioButtonMP6"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMP7"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/paintpalette"
        android:layout_margin="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zainteresowania"
            android:id="@+id/radioButtonMP7"
            android:checked="false"
            android:layout_margin="10dp" /></LinearLayout>


</LinearLayout>
